--- a/secret.css
+++ b/secret.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet');
+
+@font-face {
+    font-family: valentine;
+    src: url(valentine.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
