--- a/secret.css
+++ b/secret.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: valentine;
-    src: url("images/Valentine.ttf") format('truetype');
+    src: url(Valentine.ttf);
 }
 
 * {
